[gd_scene load_steps=61 format=3 uid="uid://duxgxp7rw77cv"]

[ext_resource type="Script" path="res://Level_1/scripts/Shilo_script.gd" id="1_fhigf"]
[ext_resource type="Texture2D" uid="uid://bpa4r86ifkghh" path="res://Assets/craftpix-net-127655-free-3-character-sprite-sheets-pixel-art/1 Woodcutter/Woodcutter_attack2.png" id="2_4q2xd"]
[ext_resource type="Texture2D" uid="uid://cxdh2wnxbojw8" path="res://Assets/craftpix-net-127655-free-3-character-sprite-sheets-pixel-art/1 Woodcutter/Woodcutter_climb.png" id="3_h3jg0"]
[ext_resource type="Texture2D" uid="uid://djsbt77aniqxt" path="res://Assets/craftpix-net-127655-free-3-character-sprite-sheets-pixel-art/1 Woodcutter/Woodcutter_death.png" id="4_ejy6x"]
[ext_resource type="Texture2D" uid="uid://bb8ea3bc1akna" path="res://Assets/craftpix-net-127655-free-3-character-sprite-sheets-pixel-art/1 Woodcutter/Woodcutter_idle.png" id="5_t8v6f"]
[ext_resource type="Texture2D" uid="uid://dhto6clq6fknn" path="res://Assets/craftpix-net-127655-free-3-character-sprite-sheets-pixel-art/1 Woodcutter/Woodcutter_jump.png" id="6_dxmp4"]
[ext_resource type="Texture2D" uid="uid://mu1rbqlgc07a" path="res://Assets/craftpix-net-127655-free-3-character-sprite-sheets-pixel-art/1 Woodcutter/Woodcutter_run.png" id="7_m6ljx"]
[ext_resource type="Texture2D" uid="uid://cxcw5m8d8xgyu" path="res://Assets/craftpix-net-127655-free-3-character-sprite-sheets-pixel-art/1 Woodcutter/Woodcutter_walk.png" id="8_xqjt8"]
[ext_resource type="AudioStream" uid="uid://dncfjcxp55cbt" path="res://Assets/SoundFX/running.mp3" id="9_d6dq3"]
[ext_resource type="AudioStream" uid="uid://v16fr8e1fhbp" path="res://Assets/SoundFX/low_stamina.mp3" id="10_2txxu"]
[ext_resource type="AudioStream" uid="uid://cbgw0mwwdvb53" path="res://Assets/SoundFX/pickup.mp3" id="10_aca2s"]
[ext_resource type="AudioStream" uid="uid://f1dylj1b5gdb" path="res://Assets/SoundFX/Attack_Dashes/swish-9.mp3" id="10_uc4qf"]
[ext_resource type="AudioStream" uid="uid://dd4r0ucldj8c1" path="res://Assets/SoundFX/Attack_Dashes/swish-10.mp3" id="11_5xf8a"]
[ext_resource type="AudioStream" uid="uid://dmyl8kqlckrc0" path="res://Assets/SoundFX/Attack_Dashes/swish-12.mp3" id="12_lcovb"]
[ext_resource type="AudioStream" uid="uid://cf175blihp4r" path="res://Assets/SoundFX/sfx_jump_07-80241.mp3" id="13_2hw35"]
[ext_resource type="AudioStream" uid="uid://cww1fl525i23r" path="res://Assets/SoundFX/land2-43790.mp3" id="14_iwvcu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tycn3"]
atlas = ExtResource("2_4q2xd")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ypmc"]
atlas = ExtResource("2_4q2xd")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aayg1"]
atlas = ExtResource("2_4q2xd")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3jc3"]
atlas = ExtResource("2_4q2xd")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kobw"]
atlas = ExtResource("2_4q2xd")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs2o0"]
atlas = ExtResource("2_4q2xd")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ybqp"]
atlas = ExtResource("3_h3jg0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cesv"]
atlas = ExtResource("3_h3jg0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlqd8"]
atlas = ExtResource("3_h3jg0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aen4m"]
atlas = ExtResource("3_h3jg0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj2ak"]
atlas = ExtResource("3_h3jg0")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_56kew"]
atlas = ExtResource("3_h3jg0")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr0bp"]
atlas = ExtResource("4_ejy6x")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p622e"]
atlas = ExtResource("4_ejy6x")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_quppf"]
atlas = ExtResource("4_ejy6x")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqvhn"]
atlas = ExtResource("4_ejy6x")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q0fb"]
atlas = ExtResource("4_ejy6x")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq8hu"]
atlas = ExtResource("4_ejy6x")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wu7s"]
atlas = ExtResource("4_ejy6x")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_acsy3"]
atlas = ExtResource("5_t8v6f")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjoag"]
atlas = ExtResource("5_t8v6f")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_syulx"]
atlas = ExtResource("5_t8v6f")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5fq6"]
atlas = ExtResource("5_t8v6f")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_axsom"]
atlas = ExtResource("6_dxmp4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g0d2"]
atlas = ExtResource("6_dxmp4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_26nhc"]
atlas = ExtResource("6_dxmp4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee1fc"]
atlas = ExtResource("6_dxmp4")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1srt"]
atlas = ExtResource("6_dxmp4")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx5yc"]
atlas = ExtResource("6_dxmp4")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n40ti"]
atlas = ExtResource("7_m6ljx")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmpqc"]
atlas = ExtResource("7_m6ljx")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmmmg"]
atlas = ExtResource("7_m6ljx")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4f56"]
atlas = ExtResource("7_m6ljx")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo8at"]
atlas = ExtResource("7_m6ljx")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_df8bg"]
atlas = ExtResource("7_m6ljx")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxt6i"]
atlas = ExtResource("8_xqjt8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_um7v0"]
atlas = ExtResource("8_xqjt8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_751v2"]
atlas = ExtResource("8_xqjt8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnqgk"]
atlas = ExtResource("8_xqjt8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl5le"]
atlas = ExtResource("8_xqjt8")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq8dg"]
atlas = ExtResource("8_xqjt8")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_6h2h1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tycn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ypmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aayg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3jc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kobw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs2o0")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ybqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cesv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlqd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aen4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj2ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56kew")
}],
"loop": true,
"name": &"climb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr0bp")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p622e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quppf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqvhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q0fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq8hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wu7s")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acsy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjoag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syulx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5fq6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axsom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g0d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26nhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee1fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1srt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx5yc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n40ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmpqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmmmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4f56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo8at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df8bg")
}],
"loop": false,
"name": &"run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxt6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um7v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_751v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnqgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl5le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq8dg")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfu2u"]
size = Vector2(35, 43.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_4jxok"]
radius = 42.0119

[node name="Shilo" type="CharacterBody2D"]
position = Vector2(147, 220)
collision_mask = 3
script = ExtResource("1_fhigf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(22, 18)
scale = Vector2(1.32812, 1.32812)
sprite_frames = SubResource("SpriteFrames_6h2h1")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.395545
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11.5, 28.25)
shape = SubResource("RectangleShape2D_nfu2u")

[node name="ThrowTimer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="IdleRestTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(12, 28)
zoom = Vector2(2.5, 2.5)
limit_left = -1030
limit_top = 0
limit_right = 1531
limit_bottom = 645
limit_smoothed = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12, 28)
shape = SubResource("CircleShape2D_4jxok")

[node name="RunningSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_d6dq3")
pitch_scale = 1.2

[node name="PickupSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_aca2s")

[node name="AttackDashSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_uc4qf")

[node name="AttackDashSFX1" type="AudioStreamPlayer2D" parent="AttackDashSFX"]
stream = ExtResource("11_5xf8a")

[node name="AttackDashSFX2" type="AudioStreamPlayer2D" parent="AttackDashSFX/AttackDashSFX1"]
stream = ExtResource("12_lcovb")

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_2hw35")
volume_db = -18.818
pitch_scale = 1.13

[node name="LandSFX" type="AudioStreamPlayer2D" parent="JumpSFX"]
stream = ExtResource("14_iwvcu")
volume_db = -12.876
pitch_scale = 1.56

[node name="LowStaminaSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_2txxu")
volume_db = -12.671
pitch_scale = 0.89
